--- a/1306.5144/limits.tex
+++ b/1306.5144/limits.tex
@@ -681,9 +681,12 @@ Our proof uses a 2-categorical lemma.
 \begin{proof}
 Let $\nu$ be the counit of $c \dashv b$, and write $\eta$ and $\epsilon$ for the unit and counit of the adjunction $f\dashv u$; because this adjunction is under $C$ we have $\epsilon a = \id_a$ and $\eta b =\id_b$. Any 2-cell $\chi$ of the form displayed below factorises through $f\iota$ as follows
 \[\xymatrix{ X \ar[d]_x \ar[r]^y \ar@{}[dr]|{\Uparrow\chi} & C \ar[d]^a \ar@{}[dr]|{\displaystyle =}  & X \ar[d]_x \ar[r]^y \ar@{}[dr]|{\Uparrow\chi} & C \ar[d]^a   \ar@{}[dr]|{\displaystyle =}   &X \ar@{}[dr]|{\Uparrow\chi} \ar[d]_x \ar[r]^y & C \ar[d]_a \ar[r]^a \ar[dr]|b & A   \ar@{}[dr]|{\displaystyle =} & X \ar[d]_x \ar[r]^y \ar@{}[dr]|{\Uparrow\chi} & C \ar[d]_a \ar[dr]^b \ar@{=}[rr] & \ar@{}[d]|{\Uparrow\nu} &  C \ar[d]^a  \\  B \ar[r]_f & A & B \ar[r]^f \ar@{=}[dr] & A \ar[d]|u \ar@{}[dl]|(.3){\Uparrow\eta} \ar@{=}[dr]  &  B \ar[r]^f \ar@{=}@/_3.5ex/[rr]^{\Uparrow\eta} & A \ar[r]^u & B \ar[u]_f &  B \ar[r]^f \ar@{=}@/_3.5ex/[rr]^{\Uparrow\eta} & A \ar[r]^u  & B \ar[ur]^c \ar[r]_f & A \ar@{}[ul]|(.3){\Uparrow f\iota} \\ & & & B \ar[r]_f \ar@{}[ur]|(.3){\Uparrow\epsilon} & A }\]
-using a triangle identity for each adjunction and the fact that $\epsilon a = \id_a$. Such factorisations are unique because the 2-cell $\zeta$ can be recovered from the pasted composite with $f\iota$: \[\xymatrix{  X \ar[d]_x \ar[r]^y \ar@{}[dr]|(.3){\Uparrow\zeta}|(.7){\Uparrow f\iota} & C \ar[d]_a \ar[dr]^b \ar@{=}[rr] & \ar@{}[d]|{\Uparrow\nu} &  C  \\ B \ar[ur]|c \ar[r]^f \ar@{=}@/_3.5ex/[rr]^{\Uparrow\eta} & A \ar[r]^u & B \ar[ur]^c & {\displaystyle =} } \xymatrix{ X \ar[d]_x \ar[r]^y \ar@{}[dr]|(.3){\Uparrow\zeta}|(.7){\Uparrow\iota} & C \ar[d]|b \ar[dr]|a \ar[drr]^b \ar@{=}[rr]& & C \ar@{}[dl]|(.4){\Uparrow\nu} \\B \ar[ur]|c \ar@{=}[r] & B  \ar[r]_f \ar@{=}@/_3.5ex/[rr]^{\Uparrow\eta} & A \ar[r]_u & B \ar[u]_c} = \xymatrix{ X \ar[d]_x \ar[r]^y \ar@{}[dr]|(.3){\Uparrow\zeta}|(.7){\Uparrow\iota} & C \ar[d]|b \ar@{}[dr]|(.3){\Uparrow\nu} \ar@{=}[r] & C    \\  B \ar[ur]|c \ar@{=}[r] & B \ar[ur]_c & {\displaystyle =}  }
+using a triangle identity for each adjunction and the fact that $\epsilon a = \id_a$. Such factorisations are unique because the 2-cell $\zeta$ can be recovered from the pasted composite with $f\iota$: 
+{\small
+\[\xymatrix{  X \ar[d]_x \ar[r]^y \ar@{}[dr]|(.3){\Uparrow\zeta}|(.7){\Uparrow f\iota} & C \ar[d]_a \ar[dr]^b \ar@{=}[rr] & \ar@{}[d]|{\Uparrow\nu} &  C  \\ B \ar[ur]|c \ar[r]^f \ar@{=}@/_3.5ex/[rr]^{\Uparrow\eta} & A \ar[r]^u & B \ar[ur]^c & {\displaystyle =} } \xymatrix{ X \ar[d]_x \ar[r]^y \ar@{}[dr]|(.3){\Uparrow\zeta}|(.7){\Uparrow\iota} & C \ar[d]|b \ar[dr]|a \ar[drr]^b \ar@{=}[rr]& & C \ar@{}[dl]|(.4){\Uparrow\nu} \\B \ar[ur]|c \ar@{=}[r] & B  \ar[r]_f \ar@{=}@/_3.5ex/[rr]^{\Uparrow\eta} & A \ar[r]_u & B \ar[u]_c} = \xymatrix{ X \ar[d]_x \ar[r]^y \ar@{}[dr]|(.3){\Uparrow\zeta}|(.7){\Uparrow\iota} & C \ar[d]|b \ar@{}[dr]|(.3){\Uparrow\nu} \ar@{=}[r] & C    \\  B \ar[ur]|c \ar@{=}[r] & B \ar[ur]_c & {\displaystyle =}  }
 \xymatrix{ X \ar[d]_x \ar[r]^y \ar@{}[dr]|(.3){\Uparrow\zeta} & C \\ B \ar[ur]_c & }\qedhere
-\] 
+\]
+}
 \end{proof}
 
 \begin{proof}[Proof of Theorem \ref{thm:splitgeorealizations}] The inclusion $\Del\op \hookrightarrow \Del[t]$ admits a left adjoint. One way to define it is to present  $\Del\op$ via the ``interval representation'': after employing a degree shift $[n] \mapsto [n+1]$, $\Del\op$ is the subcategory of $\Del+$ consisting of ordinals with distinct top and bottom elements and maps that preserve these. Most generally, we might think of the interval representation as the diagonal composite functor in the pullback diagram \[\xymatrix{ \Del+\op \pbexcursion \ar[d] \ar[r] & \Del[t] \ar@{_(->}[d] \\ \Del[b] \ar@{^(->}[r] & \Del+}\] The arrows $\Del[b] \leftarrow \Del+\op \to \Del[t]$ extend the category indexing augmented simplicial objects by introducing extra maps that define ``extra degeneracies'' either on the left or on the right. The restricted functor $\Del\op \to \Del[t]$ is the inclusion described above. It has a left adjoint: a map $\alpha \colon [k] \to [n+1]$ in $\Del[t]$ is given by a map $[n] \to [k]$ in $\Del$ that sends $i\in [n]$, thought of as a ``gap'' between adjacent elements in $[n+1]$, to the minimal $j \in [k]$ so that $\alpha(j) = i+1$. 
