--- a/1306.5144/macros.tex
+++ b/1306.5144/macros.tex
@@ -282,7 +282,7 @@
 
 % Macros for typesetting the names of different kinds of category
 
-\newcommand{\category}[1]{\underline{\smash[b]{\text{\rm{#1}}}}}
+\newcommand{\category}[1]{{\smash[b]{\text{\bf{#1}}}}}
 \newcommand{\bicat}[1]{\underline{\smash[b]{\mathcal{#1}}}}
 \newcommand{\twocat}[1]{\bicat{\text{\rm\em #1}}}
 \newcommand{\tcat}{\lcat}
