--- a/1306.5144/twocattheory.tex
+++ b/1306.5144/twocattheory.tex
@@ -558,7 +558,10 @@ For any simplicial set $X$,   $p^X\colon B^X\tfib A^X$ is also an isofibration  
 is a 1-cell in $\qCat_2\slice A$ for which $w\colon E\to F$ admits an equivalence inverse $w' \colon F \to E$ in $\qCat_2$, then $w$  is  an equivalence in the slice 2-category $\qCat_2\slice A$.
   \end{lem}
   \begin{proof}
-By a standard 2-categorical argument, we may choose  2-isomorphisms $\alpha\colon w'w\cong\id_E$ and $\beta\colon\id_F\cong ww'$ which display $w'$ as a left adjoint equivalence inverse to $w$ in $\qCat_2$. As $p$ is an isofibration in $\qCat_2$, the isomorphism $q\beta\colon q\cong qww' = pw'$ can be lifted along $p$ to give a 1-cell $\bar{w}\colon F\to E$ with $p\bar{w} = q$ and a 2-isomorphism $\gamma\colon \bar{w}\cong w'$ with $p\gamma=q\beta$. The first of these equations tells us that $\bar{w}$ is a 1-cell in $\qCat_2\slice A$.  Using the second of these equations and the triangle identities relating $\alpha$ and $\beta$, we see that the isomorphisms $\alpha\cdot\gamma w\colon \bar{w} w\cong\id_E$ and $w\gamma^{-1}\cdot\beta\colon\id_F\cong w\bar{w}$ are 2-cells in $\qCat_2\slice A$: \[ p(\alpha \cdot \gamma w) = p\alpha \cdot p\gamma w = qw\alpha \cdot q\beta w = q\id_w \qquad q(w\gamma^{-1}\cdot \beta) = qw\gamma^{-1} \cdot q\beta = p\gamma^{-1} \cdot q\beta = \id_p. \]
+By a standard 2-categorical argument, we may choose  2-isomorphisms $\alpha\colon w'w\cong\id_E$ and $\beta\colon\id_F\cong ww'$ which display $w'$ as a left adjoint equivalence inverse to $w$ in $\qCat_2$. As $p$ is an isofibration in $\qCat_2$, the isomorphism $q\beta\colon q\cong qww' = pw'$ can be lifted along $p$ to give a 1-cell $\bar{w}\colon F\to E$ with $p\bar{w} = q$ and a 2-isomorphism $\gamma\colon \bar{w}\cong w'$ with $p\gamma=q\beta$. The first of these equations tells us that $\bar{w}$ is a 1-cell in $\qCat_2\slice A$.  Using the second of these equations and the triangle identities relating $\alpha$ and $\beta$, we see that the isomorphisms $\alpha\cdot\gamma w\colon \bar{w} w\cong\id_E$ and $w\gamma^{-1}\cdot\beta\colon\id_F\cong w\bar{w}$ are 2-cells in $\qCat_2\slice A$: 
+\begin{align*}
+p(\alpha \cdot \gamma w) &= p\alpha \cdot p\gamma w = qw\alpha \cdot q\beta w = q\id_w \\ q(w\gamma^{-1}\cdot \beta) &= qw\gamma^{-1} \cdot q\beta = p\gamma^{-1} \cdot q\beta = \id_p. 
+\end{align*}
 These isomorphisms display $\bar{w}$ as an equivalence inverse to $w$ in $\qCat_2\slice A$.
   \end{proof}
 
