--- a/2005.12938/Quantum_Mereology.tex
+++ b/2005.12938/Quantum_Mereology.tex
@@ -1,4 +1,4 @@
-\documentclass[aps,pra,onecolumn,nofootinbib,11pt,tightenlines]{revtex4-1}
+\documentclass[aps,pra,onecolumn,nofootinbib,12pt,tightenlines]{revtex4-1}
 %\documentclass[prb,preprint]{revtex4-1} 
 \usepackage{amsmath,amssymb,amstext,braket, graphicx,color,xfrac,accents,tabulary,booktabs,xcolor,cases,caption,subcaption}
 
@@ -10,9 +10,27 @@ pdfborder={0 0 1},
 backref=false,colorlinks=true]{hyperref}
 \hypersetup{pdftitle={Quantum Mereology}, pdfauthor={Sean Carroll and Ashmeet Singh}, citecolor=blue,linkcolor=blue,urlcolor=blue,citecolor=blue}
 \usepackage{bookmark}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+\input{../helpers/fix-revtex-12.tex}
+
 
 \begin{document}
-\baselineskip=14pt
 \hfill CALT-TH-2020-023
 \hfill
 
