--- a/1801.08132/qm_essay_final.tex
+++ b/1801.08132/qm_essay_final.tex
@@ -10,14 +10,6 @@
 \usepackage{enumitem}
 \usepackage{amssymb}
 \usepackage{lipsum}
-\usepackage[unicode=true,
- bookmarks=true,bookmarksnumbered=false,bookmarksopen=false,
- breaklinks=false,pdfborder={0 0 1},backref=false,colorlinks=true]
- {hyperref}
-\hypersetup{pdftitle={Mad-Dog Everettianism: Quantum Mechanics at Its Most Minimal},
- pdfauthor={Sean M. Carroll and Ashmeet Singh},
- citecolor=blue,linkcolor=blue,urlcolor=blue,citecolor=blue,linkcolor=blue}
-\usepackage{breakurl}
 \usepackage[hang,flushmargin]{footmisc} 
 \usepackage{footnote}
 \usepackage{footmisc}
@@ -30,14 +22,48 @@
 \let\thefootnote=\oldthefootnote
 }
 
-\setlength{\textwidth}{6.75in} 
-\setlength{\textheight}{8.5in}
-\setlength{\oddsidemargin}{-0.125in}
-\setlength{\evensidemargin}{-0.125in}
-\setlength{\headheight}{0cm}
-\setlength{\headsep}{0cm}
-\setlength{\topmargin}{0cm}
-\setlength{\footskip}{1.5cm}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true,unicode=true,
+,breaklinks=false
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\hypersetup{pdftitle={Mad-Dog Everettianism: Quantum Mechanics at Its Most Minimal},
+ pdfauthor={Sean M. Carroll and Ashmeet Singh}}
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+\usepackage{breakurl}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \def\simgt{\mathrel{\lower2.5pt\vbox{\lineskip=0pt\baselineskip=0pt
            \hbox{$>$}\hbox{$\sim$}}}}
@@ -57,7 +83,7 @@
 \newcommand{\App}[1]{App.~\ref{#1}}
 \newcommand{\vev}[1]{\langle #1 \rangle}
 \newcommand{\GeV}{\textrm{ GeV}}
-\newcommand{\Ref}[1]{Ref.~\cite{#1}}
+\renewcommand{\Ref}[1]{Ref.~\cite{#1}}
 \newcommand{\Refs}[2]{Refs.~\cite{#1,#2}}
 \newcommand{\Tr}{\operatorname{Tr}}
 \newcommand{\mPl}{m_{\rm Pl}}
@@ -93,7 +119,6 @@
 
 
 \begin{document}
-\baselineskip=14pt
 \hfill CALT-TH-2018-006
 \hfill
 
@@ -148,7 +173,7 @@ Our approach is distinguished by thinking of that state as a vector in Hilbert s
 All of the additional elements familiar in physical theories, we will argue, can be emergent from the state vector (cf.\ \cite{Giddings:2015lla}).
 We call this approach ``Mad-Dog Everettianism," to emphasize that it is as far as we can imagine taking the program of stripping down quantum mechanics to its most pure, minimal elements.\footnote{The name is inspired by philosopher Owen Flanagan's description of his colleague Alex Rosenberg's philosophy as ``Mad-Dog Naturalism."}
 
-
+\newpage
 \begin{itemize}
 \item \textbf{The role of classical variables}
 \end{itemize}
