--- a/2005.12938/Quantum_Mereology.tex
+++ b/2005.12938/Quantum_Mereology.tex
@@ -1,4 +1,4 @@
-\documentclass[aps,pra,onecolumn,nofootinbib,12pt,tightenlines]{revtex4-1}
+\documentclass[aps,pra,onecolumn,nofootinbib,11pt,tightenlines]{revtex4-1}
 %\documentclass[prb,preprint]{revtex4-1} 
 \usepackage{amsmath,amssymb,amstext,braket, graphicx,color,xfrac,accents,tabulary,booktabs,xcolor,cases,caption,subcaption}
 
@@ -141,8 +141,7 @@ When someone hands us two spin-1/2 particles, it seems obvious how to assign Hil
 But there are circumstances,when we might know nothing more than the total Hilbert space and the Hamiltonian (and perhaps a specified initial state), and want to use that information to reverse-engineer a sensible notion of what physical system is being described, including what its individual parts are.
 This is the subject of ``Quantum Mereology," where ``mereology" is the study of how parts relate to the whole.
 It is especially important in the context of finite-dimensional Hilbert spaces, where any Hermitian operator defines an observable, and there is no notion of preferred observables that can be used to define a corresponding factorization.
-\\
-\\
+
 {This is an important problem for the foundations of quantum mechanics, in particular within an Everettian (Many-Worlds) framework.
 The basic postulates of this approach are that the world is fully described by a vector in Hilbert space, evolving according to the Schr\"odinger equation with some given Hamiltonian.
 Semi-classical ``worlds'' branch off from each other when quantum systems in superposition become entangled with the environment.
@@ -1046,14 +1045,15 @@ Sylvester's matrix has the following form, which we identify to be in the $\{\ke
 \left[ S \right] _{jk} = \frac{\omega^{jk}}{\sqrt{N}} \: .
 \end{equation}
 Since $A$ and $B$ are non-singular and diagonalizable, it follows that $\log A$ and $\log B$ exist, even though multivalued. In the case of odd dimension $d = 2 l + 1$, their principle logarithms are well defined and we are able to find explicit matrix representations for operators $\opphi$ and $\oppi$. In particular, we can obtain matrix representation for $\oppi$ in the $\ket{\phi_{j}}$ basis,
-\begin{equation}
+\begin{multline}
 \label{pimatrix}
-\braket{\phi_{j} | \oppi | \phi_{j'}} = \left( \frac{ 2 \pi}{(2 l + 1)^{2} \alpha} \right) \sum_{n = -l}^{l} n \exp{\left( \frac{2 \pi i  (j - j') n }{2l + 1} \right)} \: = \:  \begin{cases}
+\braket{\phi_{j} | \oppi | \phi_{j'}} = \left( \frac{ 2 \pi}{(2 l + 1)^{2} \alpha} \right) \sum_{n = -l}^{l} n \exp{\left( \frac{2 \pi i  (j - j') n }{2l + 1} \right)} \: = \\ 
+= \:  \begin{cases}
         0 \: , &  \text{if } j = j' \\
         \\
        \left( \frac{ i \pi}{(2 l + 1) \alpha} \right) \text{cosec}{\left(\frac{2 \pi l (j - j')}{2l + 1}  \right)} \: , & \text{if } j \neq j'\;.
         \end{cases},
-\end{equation}
+\end{multline}
 
 The matrix elements of $\oppi$ in the eigenbasis of $\opphi$ are non-local, in the sense that they have power-law-like decay in $(j-j')$, and hence connect arbitrary ``far" eigenstates of $\opphi$. This is a feature of the finite-dimensional construction and in the infinite-dimensional limit $d \to \infty$, we recover the local form of $\opphi$ as $-i d/d\phi$ as expected.
  Of course, $\opphi$ has common eigenstates with those of $\B$ and $\oppi$ shares eigenstates with $\A$. The corresponding eigenvalue equations for $\opphi$ and $\oppi$ can be easily deduced using Eqs. (\ref{phipidef}) and (\ref{specABodd}),
@@ -1150,10 +1150,11 @@ In the Quantum Measurement Limit, when there exists a consistent {pointer basis}
 This is a highly non-generic situation, since an arbitrary Hamiltonian in an arbitrary factorization will have non-commuting terms in $\intham$ and hence not admit a complete basis satisfying Eq. (\ref{pointer_states_eigen}) to serve as a pointer basis. For decoherence to be effective, there would be a small number of consistent terms in $\intham$ being monitored by the other subsystem as discussed in Section \ref{subsec:min_entropy}. 
 
 Let us see this explicitly by considering the off-diagonal matrix element $\braket{a_{j} | \rhodot(t) | a_{k} }, \: \:  j \neq k$ of $\rhodot(t)$ in the purported pointer basis $\{ \ket{a_{j}} \}  $. The decoherence term $\mathcal{D}(\oprho_{A}(t))$ in Eq. (\ref{decoherence_term}) can be further split into $\alpha = \beta$ terms and $\alpha \neq \beta$ ones. The cross-terms with $\alpha \neq \beta$ are not seen to have a definitive sign that is needed for decoherence to take place. On the other hand, let us look at the $\alpha = \beta$ terms of the matrix element,
-\begin{equation}
+\begin{multline}
 \label{like_matrix_element_1}
-\braket{a_{j} | \rhodot(t) | a_{k} } \supset - t \sum_{\alpha} \lambda^{2}_{\alpha} \left( \lla \B^{2}_{\alpha}\rra_{0} - \lla \B_{\alpha} \rra^{2}_{0} \right)  \braket{a_{j} | \left(  \Aa^{2}\oprho_{A}(0) - 2 \Aa \oprho_{A}(0)\Aa + \oprho_{A}(0) \Aa^2 \right)  | a_{k}} \: \: , j \neq k \: ,
-\end{equation}
+\braket{a_{j} | \rhodot(t) | a_{k} } \supset \\
+- t \sum_{\alpha} \lambda^{2}_{\alpha} \left( \lla \B^{2}_{\alpha}\rra_{0} - \lla \B_{\alpha} \rra^{2}_{0} \right)  \braket{a_{j} | \left(  \Aa^{2}\oprho_{A}(0) - 2 \Aa \oprho_{A}(0)\Aa + \oprho_{A}(0) \Aa^2 \right)  | a_{k}} \: \: , j \neq k \: ,
+\end{multline}
 which can be further simplified using Eq. (\ref{pointer_states_eigen}),
 \begin{equation}
 \label{like_matrix_element_2}
@@ -1221,10 +1222,11 @@ which gives us,
 \end{split}
 \end{equation}
 Substituting for $\oprho_{A}(t)$ to $\Ot$ from Eq. (\ref{oprhoA_Ot}), we get,
-\begin{equation}
+\begin{multline}
 \label{pjdot_2_full}
-\dot{p}_{j}(t) = \dot{p}_{j}(0) - t\Tr\left(\lcb \ham_{A},\lcb \ham_{A},\oprho_{A}(0)\rcb\rcb \Oj\right) - t\sum_{\alpha}\lambda_{\alpha}\lla\B_{\alpha}\rra_{0} \Tr\left( \lcb \ham_{A},\lcb \Aa,\oprho_{A}(0)\rcb\rcb \Oj\right) + \Ottwo \: ,
-\end{equation}
+\dot{p}_{j}(t) = \dot{p}_{j}(0) - t\Tr\left(\lcb \ham_{A},\lcb \ham_{A},\oprho_{A}(0)\rcb\rcb \Oj\right) - \\
+t\sum_{\alpha}\lambda_{\alpha}\lla\B_{\alpha}\rra_{0} \Tr\left( \lcb \ham_{A},\lcb \Aa,\oprho_{A}(0)\rcb\rcb \Oj\right) + \Ottwo \: ,
+\end{multline}
 where $\dot{p}_{j}(0) = -i \Tr\left( \lcb \ham_{A},\oprho_{A}(0)\rcb \Oj\right) = -i \lla \lcb \Oj,\ham_{A}\rcb \rra_{0} $. We can now further simplify this in the Quantum Measurement Limit when a consistent pointer observable exists, and after a few lines of trace manipulations we obtain,
 \begin{equation}
 \label{pjdot_1_QML}
