--- a/gr-qc-9703089/gr-qc-9703089.tex
+++ b/gr-qc-9703089/gr-qc-9703089.tex
@@ -35,6 +35,13 @@ bookmarksopenlevel=10
 \tolerance=2000
 \hbadness=2000
 \usepackage[small]{titlesec}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
 
 \begin{document}
 \title{Against Many-Worlds Interpretations}
