--- a/gr-qc-9703089/gr-qc-9703089.tex
+++ b/gr-qc-9703089/gr-qc-9703089.tex
@@ -31,13 +31,14 @@ bookmarksopenlevel=10
 \usepackage[noBBpl]{mathpazo}
 \linespread{1.1}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={6.8in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 \tolerance=2000
 \hbadness=2000
 \usepackage[small]{titlesec}
 \sloppy
 \raggedbottom
 \pagestyle{plain}
+\usepackage{microtype}
 
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/cmrsum}
