--- a/quant-ph-0209123/mq-anglais.tex
+++ b/quant-ph-0209123/mq-anglais.tex
@@ -1,5 +1,5 @@
 %% This document created by Scientific Word (R) Version 3.5
-\documentclass[a4paper,11pt,onecolumn]{article}%
+\documentclass[12pt,onecolumn]{article}%
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{amsfonts}
@@ -3749,8 +3749,8 @@ the level of families of histories, rather than at the level of individual
 histories).\ It proposes a logical framework that allows the discussion of the
 evolution of a closed quantum system, without reference to measurements.\ The
 general idea was introduced and developed by Griffiths \cite{Griffiths} but it
-has also been used, and sometimes adapted, by other authors \cite{Omnès-2}
-\cite{Gell-Mann} \cite{Omnès-3}. Since this interpretation is the most recent
+has also been used, and sometimes adapted, by other authors \cite{Omnï¿½s-2}
+\cite{Gell-Mann} \cite{Omnï¿½s-3}. Since this interpretation is the most recent
 among those that we discuss in this article, we will examine it in somewhat
 more detail than the others.\ We will nevertheless remain within the limits of
 a non-specialized introduction; the reader interested in more precise
@@ -3985,7 +3985,7 @@ of how classical equations can be recovered for a quantum system provided
 sufficient coarse graining is included (in order to ensure, not only
 decoherence between the various histories of the family, but also what these
 authors call ``inertia'' to recover classical predictability). See also chap.
-16 of \cite{Omnès-3}\ for a discussion of how classical determinism is
+16 of \cite{Omnï¿½s-3}\ for a discussion of how classical determinism is
 restored, in a weak version that ensures perfect correlations between the
 values of quasi-classical observables at different times (or course, there is
 no question of fundamental determinism in this context).\ The history point of
@@ -5662,7 +5662,7 @@ quantum mechanics'', Rev.\ Mod.\ Phys. \textbf{58}, 647-687 (1986); in an
 appendix, this article contains a review of the various interpretations of
 quantum mechanics.
 
-\bibitem {Omnès-2}R.\ Omn\`{e}s, ``Logical reformulation of quantum
+\bibitem {Omnï¿½s-2}R.\ Omn\`{e}s, ``Logical reformulation of quantum
 mechanics'', Journ.\ Stat.\ Phys.\ \textbf{53}, ``I: Foundations'', 893-932;
 ``II: Interferences and the EPR\ experiments'', 933-955; ``III: Classical
 limit and irreversibility'', 957-975 (1988).
@@ -5670,7 +5670,7 @@ limit and irreversibility'', 957-975 (1988).
 \bibitem {Gell-Mann}M.\ Gell-Mann and J.\ Hartle, ``Classical equations for
 quantum systems'', Phys.\ Rev.\ \textbf{D47}, 3345-3382 (1993).
 
-\bibitem {Omnès-3}R. Omn\`{e}s ``The Interpretation of Quantum Mechanics'',
+\bibitem {Omnï¿½s-3}R. Omn\`{e}s ``The Interpretation of Quantum Mechanics'',
 Princeton University Press (1994); ``Understanding quantum mechanics'',
 Princeton University Press (1999).
 
